--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <title>ITP-HRMS</title>
+    <!-- Inside your <head> tag -->
+    <link rel="icon" type="image/png" href="/public/logo/logo.png" />
   </head>
   <body>
     <div id="root"></div>
