update cloud link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <title>ITP-HRMS</title>
     <!-- Inside your <head> tag -->
-    <link rel="icon" type="image/png" href="/public/logo/logo.png" />
+    <link rel="icon" type="image/png" href="/logo/logo.png" />
   </head>
   <body>
     <div id="root"></div>
